[tool.poetry]
name = "python-snippet"
version = "0.1.0"
description = "Python and Data Science Snippets on the command line"
authors = ["khuyentran1401 <khuyentran1476@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.10,"
rich = "^10.4.0"
bs4 = "^0.0.1"
questionary = "^1.9.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
notebook = "^6.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
